--- a/assets/css/sb-admin-2.css
+++ b/assets/css/sb-admin-2.css
@@ -11637,8 +11637,8 @@ a:focus {
   }
 }
 
-.bg-login-image {
-  background: url("https://source.unsplash.com/K4mSJ7kc0As/600x800");
+.bg-login-images {
+  background: url("https://source.unsplash.com/F8t2VGnI47I/600x800");
   background-position: center;
   background-size: cover;
 }
