--- a/assets/css/user-style.css
+++ b/assets/css/user-style.css
@@ -48,25 +48,25 @@ body table tr td{
     font-family: poppins,-apple-system,BlinkMacSystemFont,segoe ui,Roboto,helvetica neue,Arial,sans-serif,apple color emoji,segoe ui emoji,segoe ui symbol;
     border-radius: .375rem;
 }
-  .calendar .calendar-month {
-    background-color: #e63757;
-    color: #fff;
-    border-radius: .375rem .375rem 0 0;
-    padding: .25rem;
-    font-weight: 600;
+.calendar .calendar-month {
+  background-color: #e9e503;
+  color: #fff;
+  border-radius: .375rem .375rem 0 0;
+  padding: .25rem;
+  font-weight: 600;
 }
 
 .calendar .calendar-day {
-  font-size: 1.728rem;
-  padding: .25rem;
-  border: .125rem solid rgba(230,55,87,.3);
-      border-top-color: rgba(230, 55, 87, 0.3);
-      border-top-style: solid;
-      border-top-width: 0.125rem;
-  border-top: 0;
-  border-radius: 0 0 .375rem .375rem;
-  color: #9da9bb;
-  font-weight: 700;
+font-size: 1.728rem;
+padding: .25rem;
+border: .125rem solid rgba(189, 192, 6, 0.3);
+    border-top-color: rgba(230, 227, 55, 0.3);
+    border-top-style: solid;
+    border-top-width: 0.125rem;
+border-top: 0;
+border-radius: 0 0 .375rem .375rem;
+color: #9da9bb;
+font-weight: 700;
 }
 
 .card {
