--- a/assets/css/alumni-style.css
+++ b/assets/css/alumni-style.css
@@ -282,3 +282,8 @@ box-shadow: 0 7px 14px 0 rgba(59,65,94,.1),0 3px 6px 0 rgba(0,0,0,.07);
   background-color : #fff;
 }
 
+.image-preview{
+  display:none;
+  width : 100%;
+  height : 260px;
+}
